@@ -128,7 +128,9 @@ TEZ-UI CHANGES (TEZ-8):
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
-  TEZ-1895. Vertex reRunning should decrease successfulMembers of VertexGroupInfo
+  TEZ-2036. OneToOneEdgeManager should enforce that source and destination
+  tasks have same number
+  TEZ-1895. Vertex reRunning should decrease successfulMembers of VertexGroupInfo.
   TEZ-2020. For 1-1 edge vertex configured event may be sent incorrectly
   TEZ-2015. VertexImpl.doneReconfiguringVertex() should check other criteria
   before sending notification
